# ttl-to-neo4j

./: .gitignore  README.md  direct.py  extract.py  main.py  pyproject.toml  requirements.txt
tests/: test_extract.py  test_main.py
